--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,12 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="header"></div>
     <div id="map"></div>
+    <div class='header-overlay' id="topbar" ></div>
+      <div class='poi-overlay'  >
+        <div class='poi-inner'id='poi-info' >
+        </div>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
