sidebar appears when marker is pressed
now it needs to disappear

--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,13 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="map"></div>
-    <div class='header-overlay' id="topbar" ></div>
-      <div class='poi-overlay'  >
-        <div class='poi-inner'id='poi-info' >
-        </div>
+    <div class='header-overlay' id="topbar" >
+
+    </div>
+      <div id = 'poi-wrapper'></div>
+      
+
+      <!-- <div class='poi-overlay' id='legend' ></div> -->
     
     <!--
       This HTML file is a template.
