--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,12 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="map"></div>
-    <div class='header-overlay' id="topbar" >
-      <img src='header-image.png' style= "height: 10vh"/>
+    <div style = 'position: absolute' >
+      <!--div class='header-overlay' id="topbar" >
+        <img src='header-image.png' style= "height: 10vh"/>
+      </div-->
+        <div id = 'overlay-wrapper' ></div>
     </div>
-      <div id = 'poi-wrapper'></div>
       
 
       <!-- <div class='poi-overlay' id='legend' ></div> -->
